# echo-lingo-mac

./: .gitignore  Makefile  main.py  pyproject.toml
src/: main.py
src/conversation/: config.py
src/conversation/speech/: speech_to_text.py  text_to_speech.py
src/conversation/text/: config.py  summarize.py  text_to_text.py
src/display/: app_controller.py  gui_app.py  summary_card.py
src/history/: config.py  store.py
src/topics/: config.py
