[project]
name = "echo-lingo-mac"
version = "0.1.0"
description = "A pipeline with Mac-native STT x TTT x TTS for active language practice"
authors = [
    {name = "Adrien Lynch",email = "adriienlynch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pyobjc-framework-speech (>=12.2,<13.0)",
    "pyobjc-framework-avfoundation (>=12.2,<13.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pyside6 (>=6.11.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
