[project]
name = "echo-lingo-mac"
version = "0.1.0"
description = "A pipeline with Mac-native STT x TTT x TTS for active language practice"
authors = [
    {name = "Adrien Lynch",email = "adriienlynch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=1.26,<3.0)",
    "sounddevice (>=0.4,<1.0)",
    "mlx-whisper (>=0.3,<1.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pyobjc-framework-cocoa (>=10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
